[gd_scene load_steps=16 format=4 uid="uid://qn2y6y3firdn"]

[ext_resource type="Script" uid="uid://cgmv2rpua1ias" path="res://Game/Levels/Level_0/level_0.gd" id="1_3s0rd"]
[ext_resource type="Texture2D" uid="uid://cy6v4l36hnqm6" path="res://Game/Levels/Level_0/tileMap.png" id="1_qu20q"]
[ext_resource type="PackedScene" uid="uid://bubk0i851ttv" path="res://Game/Actors/Players/Platform/PlatformPlayer.tscn" id="1_ta3a2"]
[ext_resource type="Texture2D" uid="uid://cvakmqcyi3aoe" path="res://Game/Levels/Level_0/parallaxSky2.png" id="2_kp1bq"]
[ext_resource type="Texture2D" uid="uid://btwyvsuvgguen" path="res://Game/Levels/Level_0/PlatformTileMap.png" id="2_rh00t"]
[ext_resource type="PackedScene" uid="uid://ddwsxn2qgthof" path="res://Game/Actors/Players/Platform/PlatformPlayer/magic_stick.tscn" id="3_lgwpv"]
[ext_resource type="PackedScene" uid="uid://c558w560eunqp" path="res://Game/Levels/Level_0/Shared/cube_static_body_2d.tscn" id="4_71btw"]
[ext_resource type="Texture2D" uid="uid://b7vub8e0hoqmy" path="res://Game/Levels/Level_0/parallaxSky.png" id="4_v7lw3"]
[ext_resource type="PackedScene" uid="uid://cfv7ptsv3nrny" path="res://Game/Actors/Enemies/Platform/PlatformMushroom.tscn" id="8_madtp"]
[ext_resource type="PackedScene" uid="uid://bbp6nqqifavj7" path="res://Game/Levels/Level_0/Shared/item_magic_freeze.tscn" id="8_sgmso"]
[ext_resource type="PackedScene" uid="uid://cxmei1ghmvqt4" path="res://Game/Shared/hudPlatform.tscn" id="10_ilt02"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ws4mt"]
texture = ExtResource("2_rh00t")
texture_region_size = Vector2i(8, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 8, -4, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 8, -4, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 8, -4, 8)
1:0/0 = 0
5:1/0 = 0
4:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 8, -4, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -8, 4, -8, 4, 8, -4, 8)

[sub_resource type="TileSet" id="TileSet_6b5ds"]
tile_size = Vector2i(8, 16)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ws4mt")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7spqq"]
texture = ExtResource("1_qu20q")
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -4, 8, -4, 8, 8, -8, 8)
4:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_jslg6"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7spqq")

[node name="Level0" type="Node2D"]
script = ExtResource("1_3s0rd")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="sky" type="ColorRect" parent="ParallaxBackground"]
offset_left = -207.0
offset_right = 533.0
offset_bottom = 292.0
color = Color(0, 0, 0, 1)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(320, 0)

[node name="ParallaxSky2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(235, 95)
texture = ExtResource("2_kp1bq")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(320, 0)

[node name="ParallaxSky" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(216, 143)
texture = ExtResource("4_v7lw3")

[node name="TileMaps" type="Node2D" parent="."]

[node name="platforms" type="TileMapLayer" parent="TileMaps"]
position = Vector2(1, 0)
tile_map_data = PackedByteArray("AAAvAA0AAAAAAAEAAAAwAA0AAAABAAEAAAAxAA0AAAACAAEAAAAyAA0AAAABAAEAAAAjAA0AAAAAAAEAAAAkAA0AAAABAAEAAAAlAA0AAAACAAEAAAAmAA0AAAABAAEAAAAnAA0AAAADAAEAAAAzAA0AAAACAAEAAAA0AA0AAAABAAEAAAA1AA0AAAABAAEAAAA2AA0AAAABAAEAAAA3AA0AAAACAAEAAAA4AA0AAAADAAEAAAA+AAsAAAAAAAEAAAA/AAsAAAABAAEAAABAAAsAAAACAAEAAABBAAsAAAABAAEAAABCAAsAAAADAAEAAABaAAYAAAAAAAEAAABbAAYAAAABAAEAAABcAAYAAAACAAEAAABdAAYAAAABAAEAAABeAAYAAAADAAEAAAB6AAgAAAAAAAEAAAB7AAgAAAABAAEAAAB8AAgAAAACAAEAAAB9AAgAAAABAAEAAAB+AAgAAAADAAEAAACQAAQAAAAAAAEAAACRAAQAAAABAAEAAACSAAQAAAACAAEAAACTAAQAAAABAAEAAACUAAQAAAADAAEAAACiAAcAAAAAAAEAAACjAAcAAAABAAEAAACkAAcAAAACAAEAAAClAAcAAAABAAEAAACmAAcAAAADAAEAAABLAAkAAAAAAAEAAABMAAkAAAABAAEAAABNAAkAAAACAAEAAABOAAkAAAABAAEAAABPAAkAAAACAAEAAABQAAkAAAABAAEAAABRAAkAAAABAAEAAABSAAkAAAABAAEAAABTAAkAAAACAAEAAABUAAkAAAADAAEAAABmAAkAAAAAAAEAAABnAAkAAAABAAEAAABoAAkAAAACAAEAAABpAAkAAAABAAEAAABqAAkAAAACAAEAAABrAAkAAAABAAEAAABsAAkAAAABAAEAAABtAAkAAAABAAEAAABuAAkAAAACAAEAAABvAAkAAAADAAEAAACFAAYAAAAAAAEAAACGAAYAAAABAAEAAACHAAYAAAACAAEAAACIAAYAAAABAAEAAACJAAYAAAACAAEAAACKAAYAAAABAAEAAACLAAYAAAABAAEAAACMAAYAAAABAAEAAACNAAYAAAACAAEAAACOAAYAAAADAAEAAACaAAoAAAAAAAEAAACbAAoAAAABAAEAAACcAAoAAAACAAEAAACdAAoAAAABAAEAAACeAAoAAAACAAEAAACfAAoAAAABAAEAAACgAAoAAAABAAEAAAChAAoAAAABAAEAAACiAAoAAAACAAEAAACjAAoAAAADAAEAAAC1AAkAAAAAAAEAAAC2AAkAAAABAAEAAAC3AAkAAAACAAEAAAC4AAkAAAADAAEAAADHAAgAAAAAAAEAAADIAAgAAAABAAEAAADJAAgAAAACAAEAAADKAAgAAAADAAEAAADSAAsAAAAAAAEAAADTAAsAAAABAAEAAADUAAsAAAACAAEAAADVAAsAAAABAAEAAADWAAsAAAACAAEAAAA=")
tile_set = SubResource("TileSet_6b5ds")

[node name="ground" type="TileMapLayer" parent="TileMaps"]
tile_map_data = PackedByteArray("AAACAA8AAAADAAEAAAAFAA8AAAAAAAEAAAADAA8AAAABAAEAAAAEAA8AAAABAAEAAAAGAA8AAAAAAAEAAAAHAA8AAAADAAEAAAAIAA8AAAAAAAEAAAAJAA8AAAADAAEAAAABAA8AAAAAAAEAAAAKAA8AAAADAAEAAAAAAA8AAAACAAEAAAALAA8AAAADAAEAAAAMAA8AAAABAAEAAAANAA8AAAACAAEAAAAOAA8AAAAAAAEAAAAPAA8AAAADAAEAAAAAABAAAAACAAMAAAABABAAAAAEAAMAAAACABEAAAADAAIAAAADABEAAAAFAAMAAAAEABEAAAAEAAIAAAAFABEAAAABAAMAAAAAABEAAAAEAAIAAAAAABIAAAAFAAMAAAAAABMAAAABAAMAAAAAABQAAAADAAMAAAAAABUAAAADAAMAAAABABEAAAAFAAMAAAABABIAAAADAAMAAAABABMAAAABAAIAAAABABQAAAADAAIAAAABABUAAAAFAAIAAAACABAAAAADAAMAAAACABIAAAABAAIAAAACABMAAAABAAMAAAACABQAAAAEAAIAAAACABUAAAADAAMAAAADABAAAAAFAAIAAAADABIAAAABAAIAAAADABMAAAAEAAIAAAADABQAAAAAAAMAAAADABUAAAADAAIAAAAEABAAAAAAAAMAAAAEABIAAAAEAAMAAAAEABMAAAADAAIAAAAEABQAAAAAAAMAAAAEABUAAAAEAAIAAAAFABAAAAAEAAIAAAAFABIAAAACAAIAAAAFABMAAAADAAMAAAAFABQAAAADAAIAAAAFABUAAAABAAIAAAAGABAAAAADAAMAAAAGABEAAAADAAMAAAAGABIAAAACAAMAAAAGABMAAAAAAAIAAAAGABQAAAAEAAMAAAAGABUAAAACAAMAAAAHABAAAAAEAAIAAAAHABEAAAADAAMAAAAHABIAAAADAAIAAAAHABMAAAAFAAIAAAAHABQAAAAAAAMAAAAHABUAAAABAAMAAAAIABAAAAAAAAMAAAAIABEAAAABAAMAAAAIABIAAAAEAAIAAAAIABMAAAAAAAMAAAAIABQAAAACAAMAAAAIABUAAAACAAIAAAAJABAAAAAAAAMAAAAJABEAAAAFAAMAAAAJABIAAAADAAIAAAAJABMAAAADAAIAAAAJABQAAAADAAMAAAAJABUAAAACAAIAAAAKABAAAAAAAAMAAAAKABEAAAAFAAMAAAAKABIAAAACAAMAAAAKABMAAAABAAMAAAAKABQAAAACAAMAAAAKABUAAAAEAAMAAAALABAAAAABAAMAAAALABEAAAAEAAMAAAALABIAAAACAAMAAAALABMAAAAAAAMAAAALABQAAAACAAIAAAALABUAAAACAAIAAAAMABAAAAADAAMAAAAMABEAAAAEAAIAAAAMABIAAAACAAIAAAAMABMAAAAAAAIAAAAMABQAAAAAAAIAAAAMABUAAAAFAAIAAAANABAAAAADAAIAAAANABEAAAAEAAIAAAANABIAAAAEAAIAAAANABMAAAAEAAIAAAANABQAAAAEAAMAAAANABUAAAACAAIAAAAOABAAAAACAAMAAAAOABEAAAADAAIAAAAOABIAAAAFAAMAAAAOABMAAAABAAMAAAAOABQAAAAAAAIAAAAOABUAAAAFAAMAAAAPABAAAAACAAMAAAAPABEAAAADAAIAAAAPABIAAAACAAMAAAAPABMAAAACAAMAAAAPABQAAAACAAMAAAAPABUAAAADAAMAAAAQABAAAAAEAAIAAAAQABEAAAAEAAMAAAAQABIAAAAFAAIAAAAQABMAAAACAAIAAAAQABQAAAACAAMAAAAQABUAAAAAAAMAAAARABAAAAACAAMAAAARABEAAAAAAAIAAAARABIAAAAEAAIAAAARABMAAAAFAAMAAAARABQAAAAAAAIAAAARABUAAAAEAAIAAAASABAAAAAFAAIAAAASABEAAAAEAAIAAAASABIAAAAFAAMAAAASABMAAAADAAMAAAASABQAAAAFAAMAAAASABUAAAACAAMAAAATABAAAAAFAAMAAAATABEAAAACAAMAAAATABIAAAAFAAIAAAATABMAAAADAAMAAAATABQAAAABAAMAAAATABUAAAABAAIAAAAUABAAAAAFAAMAAAAUABEAAAADAAIAAAAUABIAAAAEAAMAAAAUABMAAAABAAIAAAAUABQAAAACAAIAAAAUABUAAAADAAMAAAAVABAAAAAAAAIAAAAVABEAAAAAAAIAAAAVABIAAAADAAIAAAAVABMAAAAFAAIAAAAVABQAAAADAAIAAAAVABUAAAACAAIAAAAWABAAAAACAAIAAAAWABEAAAACAAIAAAAWABIAAAAFAAIAAAAWABMAAAAEAAMAAAAWABQAAAADAAMAAAAWABUAAAAAAAMAAAAXABAAAAABAAMAAAAXABEAAAACAAMAAAAXABIAAAABAAIAAAAXABMAAAAEAAIAAAAXABQAAAAEAAIAAAAXABUAAAADAAIAAAAYABAAAAAAAAMAAAAYABEAAAACAAMAAAAYABIAAAABAAMAAAAYABMAAAAFAAIAAAAYABQAAAABAAMAAAAYABUAAAABAAIAAAAZABAAAAABAAIAAAAZABEAAAACAAMAAAAZABIAAAAEAAIAAAAZABMAAAAFAAMAAAAZABQAAAADAAMAAAAZABUAAAABAAIAAAAaABAAAAADAAMAAAAaABEAAAADAAIAAAAaABIAAAAAAAMAAAAaABMAAAACAAIAAAAaABQAAAAFAAMAAAAaABUAAAADAAMAAAAbABAAAAAFAAMAAAAbABEAAAAEAAIAAAAbABIAAAAAAAMAAAAbABMAAAAFAAIAAAAbABQAAAABAAIAAAAbABUAAAACAAMAAAAcABAAAAAEAAMAAAAcABEAAAADAAIAAAAcABIAAAABAAMAAAAcABMAAAACAAIAAAAcABQAAAAFAAMAAAAcABUAAAAAAAIAAAAdABAAAAADAAIAAAAdABEAAAAAAAMAAAAdABIAAAACAAIAAAAdABMAAAABAAIAAAAdABQAAAAFAAMAAAAdABUAAAAEAAIAAAAeABAAAAAAAAMAAAAeABEAAAAAAAMAAAAeABIAAAACAAMAAAAeABMAAAAAAAIAAAAeABQAAAAAAAMAAAAeABUAAAADAAIAAAAQAA8AAAACAAEAAAATAA8AAAADAAEAAAAWAA8AAAAAAAEAAAAZAA8AAAAAAAEAAAAbAA8AAAAAAAEAAAAdAA8AAAABAAEAAAAcAA8AAAAAAAEAAAAXAA8AAAADAAEAAAAUAA8AAAACAAEAAAASAA8AAAADAAEAAAARAA8AAAACAAEAAAAVAA8AAAABAAEAAAAYAA8AAAACAAEAAAAaAA8AAAADAAEAAAAeAA8AAAACAAEAAAAfAA8AAAABAAEAAAAgAA8AAAACAAEAAAAhAA8AAAADAAEAAAAiAA8AAAAAAAEAAAAjAA8AAAACAAEAAAAkAA8AAAABAAEAAAAlAA8AAAADAAEAAAAmAA8AAAABAAEAAAAnAA8AAAACAAEAAAAoAA8AAAAAAAEAAAApAA8AAAAAAAEAAAAqAA8AAAADAAEAAAArAA8AAAADAAEAAAAsAA8AAAADAAEAAAAfABAAAAAAAAIAAAAfABEAAAACAAMAAAAfABIAAAAEAAIAAAAfABMAAAAAAAIAAAAfABQAAAACAAMAAAAfABUAAAACAAMAAAAfABYAAAAEAAMAAAAgABAAAAADAAMAAAAgABEAAAADAAIAAAAgABIAAAAEAAMAAAAgABMAAAAEAAMAAAAgABQAAAACAAIAAAAgABUAAAABAAIAAAAgABYAAAADAAIAAAAhABAAAAABAAMAAAAhABEAAAAFAAMAAAAhABIAAAADAAIAAAAhABMAAAACAAIAAAAhABQAAAAEAAIAAAAhABUAAAABAAMAAAAhABYAAAABAAIAAAAiABAAAAADAAIAAAAiABEAAAACAAIAAAAiABIAAAAFAAMAAAAiABMAAAABAAIAAAAiABQAAAAFAAMAAAAiABUAAAAAAAIAAAAiABYAAAADAAMAAAAjABAAAAAFAAIAAAAjABEAAAAEAAMAAAAjABIAAAACAAMAAAAjABMAAAABAAMAAAAjABQAAAADAAMAAAAjABUAAAACAAMAAAAjABYAAAACAAMAAAAkABAAAAACAAMAAAAkABEAAAAAAAMAAAAkABIAAAAEAAMAAAAkABMAAAAEAAMAAAAkABQAAAACAAMAAAAkABUAAAAEAAIAAAAkABYAAAABAAIAAAAlABAAAAAFAAMAAAAlABEAAAABAAMAAAAlABIAAAAAAAMAAAAlABMAAAAAAAIAAAAlABQAAAABAAMAAAAlABUAAAAAAAIAAAAlABYAAAAAAAIAAAAmABAAAAAFAAIAAAAmABEAAAAEAAIAAAAmABIAAAAFAAMAAAAmABMAAAACAAIAAAAmABQAAAAFAAIAAAAmABUAAAADAAMAAAAmABYAAAACAAMAAAAnABAAAAAFAAIAAAAnABEAAAAFAAMAAAAnABIAAAAAAAIAAAAnABMAAAAEAAMAAAAnABQAAAAFAAIAAAAnABUAAAAEAAMAAAAnABYAAAAAAAIAAAAoABAAAAACAAIAAAAoABEAAAADAAIAAAAoABIAAAADAAMAAAAoABMAAAAEAAIAAAAoABQAAAACAAMAAAAoABUAAAAEAAMAAAAoABYAAAABAAIAAAApABAAAAABAAIAAAApABEAAAAFAAMAAAApABIAAAAFAAMAAAApABMAAAADAAMAAAApABQAAAADAAIAAAApABUAAAAFAAIAAAApABYAAAAEAAIAAAAqABAAAAACAAIAAAAqABEAAAABAAMAAAAqABIAAAACAAIAAAAqABMAAAABAAIAAAAqABQAAAABAAIAAAAqABUAAAAAAAMAAAAqABYAAAADAAMAAAArABAAAAAEAAMAAAArABEAAAACAAIAAAArABIAAAADAAMAAAArABMAAAAEAAMAAAArABQAAAADAAMAAAArABUAAAADAAIAAAArABYAAAAFAAMAAAAsABAAAAAAAAIAAAAsABEAAAADAAMAAAAsABIAAAAAAAIAAAAsABMAAAAEAAIAAAAsABQAAAACAAIAAAAsABUAAAAFAAMAAAAsABYAAAAFAAMAAAAtABAAAAAAAAIAAAAtABEAAAACAAMAAAAtABIAAAAEAAIAAAAtABMAAAAAAAIAAAAtABQAAAACAAMAAAAtABUAAAACAAMAAAAtABYAAAAEAAMAAAD//w8AAAAAAAEAAAD+/w8AAAAAAAEAAAD9/w8AAAACAAEAAAD8/w8AAAAAAAEAAAD7/w8AAAACAAEAAAD6/w8AAAACAAEAAAD5/w8AAAADAAEAAAD4/w8AAAAAAAEAAAD3/w8AAAACAAEAAAD2/w8AAAADAAEAAAD1/w8AAAAAAAEAAAD0/xAAAAADAAIAAAD0/xEAAAADAAIAAAD0/xIAAAAAAAMAAAD0/xMAAAAFAAMAAAD0/xQAAAABAAMAAAD0/xUAAAAEAAIAAAD1/xAAAAAAAAMAAAD1/xEAAAAFAAIAAAD1/xIAAAAEAAIAAAD1/xMAAAACAAIAAAD1/xQAAAAEAAMAAAD1/xUAAAAFAAMAAAD2/xAAAAAEAAMAAAD2/xEAAAACAAMAAAD2/xIAAAADAAMAAAD2/xMAAAACAAIAAAD2/xQAAAAFAAMAAAD2/xUAAAAAAAMAAAD3/xAAAAAAAAMAAAD3/xEAAAACAAMAAAD3/xIAAAAEAAIAAAD3/xMAAAAEAAIAAAD3/xQAAAAAAAMAAAD3/xUAAAAAAAIAAAD4/xAAAAACAAIAAAD4/xEAAAACAAMAAAD4/xIAAAACAAMAAAD4/xMAAAABAAMAAAD4/xQAAAAAAAIAAAD4/xUAAAAFAAMAAAD5/xAAAAACAAIAAAD5/xEAAAAEAAMAAAD5/xIAAAAEAAIAAAD5/xMAAAACAAIAAAD5/xQAAAADAAMAAAD5/xUAAAAEAAMAAAD6/xAAAAACAAMAAAD6/xEAAAABAAMAAAD6/xIAAAAAAAMAAAD6/xMAAAACAAMAAAD6/xQAAAACAAIAAAD6/xUAAAAEAAMAAAD7/xAAAAAAAAIAAAD7/xEAAAACAAMAAAD7/xIAAAADAAMAAAD7/xMAAAABAAMAAAD7/xQAAAAAAAIAAAD7/xUAAAAFAAIAAAD8/xAAAAAFAAMAAAD8/xEAAAAAAAMAAAD8/xIAAAAEAAMAAAD8/xMAAAADAAMAAAD8/xQAAAACAAMAAAD8/xUAAAAAAAMAAAD9/xAAAAABAAMAAAD9/xEAAAABAAIAAAD9/xIAAAAEAAIAAAD9/xMAAAAFAAIAAAD9/xQAAAACAAIAAAD9/xUAAAADAAIAAAD+/xAAAAAEAAMAAAD+/xEAAAAFAAIAAAD+/xIAAAAEAAMAAAD+/xMAAAAFAAMAAAD+/xQAAAAEAAMAAAD+/xUAAAADAAIAAAD//xAAAAAAAAIAAAD//xEAAAACAAMAAAD//xIAAAACAAMAAAD//xMAAAAFAAIAAAD//xQAAAABAAMAAAD//xUAAAAFAAMAAAAtAA8AAAABAAEAAAAuAA8AAAACAAEAAAAuABAAAAADAAMAAAAuABEAAAADAAIAAAAuABIAAAAEAAMAAAAuABMAAAAEAAMAAAAuABQAAAACAAIAAAAuABUAAAABAAIAAAAuABYAAAADAAIAAAAvAA8AAAADAAEAAAAvABAAAAABAAMAAAAvABEAAAAFAAMAAAAvABIAAAADAAIAAAAvABMAAAACAAIAAAAvABQAAAAEAAIAAAAvABUAAAABAAMAAAAvABYAAAABAAIAAAAwAA8AAAAAAAEAAAAwABAAAAADAAIAAAAwABEAAAACAAIAAAAwABIAAAAFAAMAAAAwABMAAAABAAIAAAAwABQAAAAFAAMAAAAwABUAAAAAAAIAAAAwABYAAAADAAMAAAAxAA8AAAACAAEAAAAxABAAAAAFAAIAAAAxABEAAAAEAAMAAAAxABIAAAACAAMAAAAxABMAAAABAAMAAAAxABQAAAADAAMAAAAxABUAAAACAAMAAAAxABYAAAACAAMAAAAyAA8AAAABAAEAAAAyABAAAAACAAMAAAAyABEAAAAAAAMAAAAyABIAAAAEAAMAAAAyABMAAAAEAAMAAAAyABQAAAACAAMAAAAyABUAAAAEAAIAAAAyABYAAAABAAIAAAAzAA8AAAADAAEAAAAzABAAAAAFAAMAAAAzABEAAAABAAMAAAAzABIAAAAAAAMAAAAzABMAAAAAAAIAAAAzABQAAAABAAMAAAAzABUAAAAAAAIAAAAzABYAAAAAAAIAAAA0AA8AAAABAAEAAAA0ABAAAAAFAAIAAAA0ABEAAAAEAAIAAAA0ABIAAAAFAAMAAAA0ABMAAAACAAIAAAA0ABQAAAAFAAIAAAA0ABUAAAADAAMAAAA0ABYAAAACAAMAAAA1AA8AAAADAAMAAAA1ABAAAAAFAAIAAAA1ABEAAAAFAAMAAAA1ABIAAAAAAAIAAAA1ABMAAAAEAAMAAAA1ABQAAAAFAAIAAAA1ABUAAAAEAAMAAAA1ABYAAAAAAAIAAAA2AA8AAAADAAMAAAA2ABAAAAACAAIAAAA2ABEAAAADAAIAAAA2ABIAAAADAAMAAAA2ABMAAAAEAAIAAAA2ABQAAAACAAMAAAA2ABUAAAAEAAMAAAA2ABYAAAABAAIAAAA3AA8AAAAAAAEAAAA3ABAAAAABAAIAAAA3ABEAAAAFAAMAAAA3ABIAAAAFAAMAAAA3ABMAAAADAAMAAAA3ABQAAAADAAIAAAA3ABUAAAAFAAIAAAA3ABYAAAAEAAIAAAA4AA8AAAADAAEAAAA4ABAAAAACAAIAAAA4ABEAAAABAAMAAAA4ABIAAAACAAIAAAA4ABMAAAABAAIAAAA4ABQAAAABAAIAAAA4ABUAAAAAAAMAAAA4ABYAAAADAAMAAAA5AA8AAAADAAEAAAA5ABAAAAAEAAMAAAA5ABEAAAACAAIAAAA5ABIAAAADAAMAAAA5ABMAAAAEAAMAAAA5ABQAAAADAAMAAAA5ABUAAAADAAIAAAA5ABYAAAAFAAMAAAA6AA8AAAABAAEAAAA6ABAAAAAAAAIAAAA6ABEAAAACAAMAAAA6ABIAAAAEAAIAAAA6ABMAAAAAAAIAAAA6ABQAAAACAAMAAAA6ABUAAAACAAMAAAA6ABYAAAAEAAMAAAA7AA8AAAACAAEAAAA7ABAAAAADAAMAAAA7ABEAAAADAAIAAAA7ABIAAAAEAAMAAAA7ABMAAAAEAAMAAAA7ABQAAAACAAIAAAA7ABUAAAABAAIAAAA7ABYAAAADAAIAAAA8AA8AAAADAAEAAAA8ABAAAAABAAMAAAA8ABEAAAAFAAMAAAA8ABIAAAADAAIAAAA8ABMAAAACAAIAAAA8ABQAAAAEAAIAAAA8ABUAAAABAAMAAAA8ABYAAAABAAIAAAA9AA8AAAAAAAEAAAA9ABAAAAADAAIAAAA9ABEAAAACAAIAAAA9ABIAAAAFAAMAAAA9ABMAAAABAAIAAAA9ABQAAAAFAAMAAAA9ABUAAAAAAAIAAAA9ABYAAAADAAMAAAA+AA8AAAACAAEAAAA+ABAAAAAFAAIAAAA+ABEAAAAEAAMAAAA+ABIAAAACAAMAAAA+ABMAAAABAAMAAAA+ABQAAAADAAMAAAA+ABUAAAACAAMAAAA+ABYAAAACAAMAAAA/AA8AAAABAAEAAAA/ABAAAAACAAMAAAA/ABEAAAAAAAMAAAA/ABIAAAAEAAMAAAA/ABMAAAAEAAMAAAA/ABQAAAACAAMAAAA/ABUAAAAEAAIAAAA/ABYAAAABAAIAAABAAA8AAAADAAEAAABAABAAAAAFAAMAAABAABEAAAABAAMAAABAABIAAAAAAAMAAABAABMAAAAAAAIAAABAABQAAAABAAMAAABAABUAAAAAAAIAAABAABYAAAAAAAIAAABBAA8AAAABAAEAAABBABAAAAAFAAIAAABBABEAAAAEAAIAAABBABIAAAAFAAMAAABBABMAAAACAAIAAABBABQAAAAFAAIAAABBABUAAAADAAMAAABBABYAAAACAAMAAABCAA8AAAACAAEAAABCABAAAAAFAAIAAABCABEAAAAFAAMAAABCABIAAAAAAAIAAABCABMAAAAEAAMAAABCABQAAAAFAAIAAABCABUAAAAEAAMAAABCABYAAAAAAAIAAABDAA8AAAAAAAEAAABDABAAAAACAAIAAABDABEAAAADAAIAAABDABIAAAADAAMAAABDABMAAAAEAAIAAABDABQAAAACAAMAAABDABUAAAAEAAMAAABDABYAAAABAAIAAABEAA8AAAAAAAEAAABEABAAAAABAAIAAABEABEAAAAFAAMAAABEABIAAAAFAAMAAABEABMAAAADAAMAAABEABQAAAADAAIAAABEABUAAAAFAAIAAABEABYAAAAEAAIAAABFAA8AAAADAAEAAABFABAAAAACAAIAAABFABEAAAABAAMAAABFABIAAAACAAIAAABFABMAAAABAAIAAABFABQAAAABAAIAAABFABUAAAAAAAMAAABFABYAAAADAAMAAABGAA8AAAADAAEAAABGABAAAAAEAAMAAABGABEAAAACAAIAAABGABIAAAADAAMAAABGABMAAAAEAAMAAABGABQAAAADAAMAAABGABUAAAADAAIAAABGABYAAAAFAAMAAABHAA8AAAADAAEAAABHABAAAAAAAAIAAABHABEAAAADAAMAAABHABIAAAAAAAIAAABHABMAAAAEAAIAAABHABQAAAACAAIAAABHABUAAAAFAAMAAABHABYAAAAFAAMAAABIAA8AAAABAAEAAABIABAAAAAAAAIAAABIABEAAAACAAMAAABIABIAAAAEAAIAAABIABMAAAAAAAIAAABIABQAAAACAAMAAABIABUAAAACAAMAAABIABYAAAAEAAMAAABJAA8AAAACAAEAAABJABAAAAADAAMAAABJABEAAAADAAIAAABJABIAAAAEAAMAAABJABMAAAAEAAMAAABJABQAAAACAAIAAABJABUAAAABAAIAAABJABYAAAADAAIAAABKAA8AAAADAAEAAABKABAAAAABAAMAAABKABEAAAAFAAMAAABKABIAAAADAAIAAABKABMAAAACAAIAAABKABQAAAAEAAIAAABKABUAAAABAAMAAABKABYAAAABAAIAAABLAA8AAAAAAAEAAABLABAAAAADAAIAAABLABEAAAACAAIAAABLABIAAAAFAAMAAABLABMAAAABAAIAAABLABQAAAAFAAMAAABLABUAAAAAAAIAAABLABYAAAADAAMAAABMAA8AAAACAAEAAABMABAAAAAFAAIAAABMABEAAAAEAAMAAABMABIAAAACAAMAAABMABMAAAABAAMAAABMABQAAAADAAMAAABMABUAAAACAAMAAABMABYAAAACAAMAAABNAA8AAAABAAEAAABNABAAAAACAAMAAABNABEAAAAAAAMAAABNABIAAAAEAAMAAABNABMAAAAEAAMAAABNABQAAAACAAMAAABNABUAAAAEAAIAAABNABYAAAABAAIAAABOAA8AAAADAAEAAABOABAAAAAFAAMAAABOABEAAAABAAMAAABOABIAAAAAAAMAAABOABMAAAAAAAIAAABOABQAAAABAAMAAABOABUAAAAAAAIAAABOABYAAAAAAAIAAABPAA8AAAABAAEAAABPABAAAAAFAAIAAABPABEAAAAEAAIAAABPABIAAAAFAAMAAABPABMAAAACAAIAAABPABQAAAAFAAIAAABPABUAAAADAAMAAABPABYAAAACAAMAAABQAA8AAAACAAEAAABQABAAAAAFAAIAAABQABEAAAAFAAMAAABQABIAAAAAAAIAAABQABMAAAAEAAMAAABQABQAAAAFAAIAAABQABUAAAAEAAMAAABQABYAAAAAAAIAAABRAA8AAAAAAAEAAABRABAAAAACAAIAAABRABEAAAADAAIAAABRABIAAAADAAMAAABRABMAAAAEAAIAAABRABQAAAACAAMAAABRABUAAAAEAAMAAABRABYAAAABAAIAAABSAA8AAAAAAAEAAABSABAAAAABAAIAAABSABEAAAAFAAMAAABSABIAAAAFAAMAAABSABMAAAADAAMAAABSABQAAAADAAIAAABSABUAAAAFAAIAAABSABYAAAAEAAIAAABTAA8AAAADAAEAAABTABAAAAACAAIAAABTABEAAAABAAMAAABTABIAAAACAAIAAABTABMAAAABAAIAAABTABQAAAABAAIAAABTABUAAAAAAAMAAABTABYAAAADAAMAAABUAA8AAAADAAEAAABUABAAAAAEAAMAAABUABEAAAACAAIAAABUABIAAAADAAMAAABUABMAAAAEAAMAAABUABQAAAADAAMAAABUABUAAAADAAIAAABUABYAAAAFAAMAAABVAA8AAAADAAEAAABVABAAAAAAAAIAAABVABEAAAADAAMAAABVABIAAAAAAAIAAABVABMAAAAEAAIAAABVABQAAAACAAIAAABVABUAAAAFAAMAAABVABYAAAAFAAMAAABWAA8AAAABAAEAAABWABAAAAAAAAIAAABWABEAAAACAAMAAABWABIAAAAEAAIAAABWABMAAAAAAAIAAABWABQAAAACAAMAAABWABUAAAACAAMAAABWABYAAAAEAAMAAABXAA8AAAACAAEAAABXABAAAAADAAMAAABXABEAAAADAAIAAABXABIAAAAEAAMAAABXABMAAAAEAAMAAABXABQAAAACAAIAAABXABUAAAABAAIAAABXABYAAAADAAIAAABYAA8AAAADAAEAAABYABAAAAABAAMAAABYABEAAAAFAAMAAABYABIAAAADAAIAAABYABMAAAACAAIAAABYABQAAAAEAAIAAABYABUAAAABAAMAAABYABYAAAABAAIAAABZAA8AAAAAAAEAAABZABAAAAADAAIAAABZABEAAAACAAIAAABZABIAAAAFAAMAAABZABMAAAABAAIAAABZABQAAAAFAAMAAABZABUAAAAAAAIAAABZABYAAAADAAMAAABaAA8AAAACAAEAAABaABAAAAAFAAIAAABaABEAAAAEAAMAAABaABIAAAACAAMAAABaABMAAAABAAMAAABaABQAAAADAAMAAABaABUAAAACAAMAAABaABYAAAACAAMAAABbAA8AAAABAAEAAABbABAAAAACAAMAAABbABEAAAAAAAMAAABbABIAAAAEAAMAAABbABMAAAAEAAMAAABbABQAAAACAAMAAABbABUAAAAEAAIAAABbABYAAAABAAIAAABcAA8AAAADAAEAAABcABAAAAAFAAMAAABcABEAAAABAAMAAABcABIAAAAAAAMAAABcABMAAAAAAAIAAABcABQAAAABAAMAAABcABUAAAAAAAIAAABcABYAAAAAAAIAAABdAA8AAAABAAEAAABdABAAAAAFAAIAAABdABEAAAAEAAIAAABdABIAAAAFAAMAAABdABMAAAACAAIAAABdABQAAAAFAAIAAABdABUAAAADAAMAAABdABYAAAACAAMAAABeAA8AAAACAAEAAABeABAAAAAFAAIAAABeABEAAAAFAAMAAABeABIAAAAAAAIAAABeABMAAAAEAAMAAABeABQAAAAFAAIAAABeABUAAAAEAAMAAABeABYAAAAAAAIAAABfAA8AAAAAAAEAAABfABAAAAACAAIAAABfABEAAAADAAIAAABfABIAAAADAAMAAABfABMAAAAEAAIAAABfABQAAAACAAMAAABfABUAAAAEAAMAAABfABYAAAABAAIAAABgAA8AAAAAAAEAAABgABAAAAABAAIAAABgABEAAAAFAAMAAABgABIAAAAFAAMAAABgABMAAAADAAMAAABgABQAAAADAAIAAABgABUAAAAFAAIAAABgABYAAAAEAAIAAABhAA8AAAADAAEAAABhABAAAAACAAIAAABhABEAAAABAAMAAABhABIAAAACAAIAAABhABMAAAABAAIAAABhABQAAAABAAIAAABhABUAAAAAAAMAAABhABYAAAADAAMAAABiAA8AAAADAAEAAABiABAAAAAEAAMAAABiABEAAAACAAIAAABiABIAAAADAAMAAABiABMAAAAEAAMAAABiABQAAAADAAMAAABiABUAAAADAAIAAABiABYAAAAFAAMAAABjAA8AAAADAAEAAABjABAAAAAAAAIAAABjABEAAAADAAMAAABjABIAAAAAAAIAAABjABMAAAAEAAIAAABjABQAAAACAAIAAABjABUAAAAFAAMAAABjABYAAAAFAAMAAABkAA8AAAABAAEAAABkABAAAAAAAAIAAABkABEAAAACAAMAAABkABIAAAAEAAIAAABkABMAAAAAAAIAAABkABQAAAACAAMAAABkABUAAAACAAMAAABkABYAAAAEAAMAAABlAA8AAAACAAEAAABlABAAAAADAAMAAABlABEAAAADAAIAAABlABIAAAAEAAMAAABlABMAAAAEAAMAAABlABQAAAACAAIAAABlABUAAAABAAIAAABlABYAAAADAAIAAABmAA8AAAADAAEAAABmABAAAAABAAMAAABmABEAAAAFAAMAAABmABIAAAADAAIAAABmABMAAAACAAIAAABmABQAAAAEAAIAAABmABUAAAABAAMAAABmABYAAAABAAIAAABnAA8AAAAAAAEAAABnABAAAAADAAIAAABnABEAAAACAAIAAABnABIAAAAFAAMAAABnABMAAAABAAIAAABnABQAAAAFAAMAAABnABUAAAAAAAIAAABnABYAAAADAAMAAABoAA8AAAACAAEAAABoABAAAAAFAAIAAABoABEAAAAEAAMAAABoABIAAAACAAMAAABoABMAAAABAAMAAABoABQAAAADAAMAAABoABUAAAACAAMAAABoABYAAAACAAMAAABpAA8AAAABAAEAAABpABAAAAACAAMAAABpABEAAAAAAAMAAABpABIAAAAEAAMAAABpABMAAAAEAAMAAABpABQAAAACAAMAAABpABUAAAAEAAIAAABpABYAAAABAAIAAABqAA8AAAADAAEAAABqABAAAAAFAAMAAABqABEAAAABAAMAAABqABIAAAAAAAMAAABqABMAAAAAAAIAAABqABQAAAABAAMAAABqABUAAAAAAAIAAABqABYAAAAAAAIAAABrAA8AAAABAAEAAABrABAAAAAFAAIAAABrABEAAAAEAAIAAABrABIAAAAFAAMAAABrABMAAAACAAIAAABrABQAAAAFAAIAAABrABUAAAADAAMAAABrABYAAAACAAMAAABsAA8AAAACAAEAAABsABAAAAAFAAIAAABsABEAAAAFAAMAAABsABIAAAAAAAIAAABsABMAAAAEAAMAAABsABQAAAAFAAIAAABsABUAAAAEAAMAAABsABYAAAAAAAIAAABtAA8AAAAAAAEAAABtABAAAAACAAIAAABtABEAAAADAAIAAABtABIAAAADAAMAAABtABMAAAAEAAIAAABtABQAAAACAAMAAABtABUAAAAEAAMAAABtABYAAAABAAIAAABuAA8AAAAAAAEAAABuABAAAAABAAIAAABuABEAAAAFAAMAAABuABIAAAAFAAMAAABuABMAAAADAAMAAABuABQAAAADAAIAAABuABUAAAAFAAIAAABuABYAAAAEAAIAAABvAA8AAAADAAEAAABvABAAAAACAAIAAABvABEAAAABAAMAAABvABIAAAACAAIAAABvABMAAAABAAIAAABvABQAAAABAAIAAABvABUAAAAAAAMAAABvABYAAAADAAMAAABwAA8AAAADAAEAAABwABAAAAAEAAMAAABwABEAAAACAAIAAABwABIAAAADAAMAAABwABMAAAAEAAMAAABwABQAAAADAAMAAABwABUAAAADAAIAAABwABYAAAAFAAMAAABxAA8AAAAAAAEAAABxABAAAAAAAAIAAABxABEAAAADAAMAAABxABIAAAAAAAIAAABxABMAAAAEAAIAAABxABQAAAACAAIAAABxABUAAAAFAAMAAABxABYAAAAFAAMAAAByAA8AAAABAAEAAABzAA8AAAACAAEAAAB0AA8AAAADAAEAAAB1AA8AAAAAAAEAAAB2AA8AAAABAAEAAAB3AA8AAAACAAEAAAB4AA8AAAADAAEAAAB5AA8AAAAAAAEAAAB6AA8AAAABAAEAAAB7AA8AAAACAAEAAAB8AA8AAAADAAEAAAB9AA8AAAAAAAEAAAB+AA8AAAABAAEAAAB/AA8AAAACAAEAAACAAA8AAAADAAEAAACBAA8AAAAAAAEAAACCAA8AAAABAAEAAACDAA8AAAACAAEAAACEAA8AAAADAAEAAACFAA8AAAAAAAEAAACGAA8AAAABAAEAAACHAA8AAAACAAEAAACIAA8AAAADAAEAAACJAA8AAAAAAAEAAACKAA8AAAABAAEAAACLAA8AAAACAAEAAACMAA8AAAADAAEAAACNAA8AAAAAAAEAAACOAA8AAAABAAEAAACPAA8AAAACAAEAAACQAA8AAAADAAEAAAByABAAAAAFAAMAAACOABYAAAAAAAMAAAByABEAAAAEAAMAAAByABIAAAAEAAMAAAByABMAAAAAAAIAAAByABQAAAAEAAIAAAByABUAAAAEAAMAAAByABYAAAAEAAMAAABzABAAAAABAAIAAABzABEAAAABAAMAAABzABIAAAAFAAIAAABzABMAAAAAAAMAAABzABQAAAAFAAIAAABzABUAAAAFAAIAAABzABYAAAAAAAMAAAB0ABAAAAABAAIAAAB0ABEAAAAEAAIAAAB0ABIAAAAAAAIAAAB0ABMAAAABAAIAAAB0ABQAAAABAAIAAAB0ABUAAAAEAAMAAAB0ABYAAAADAAMAAAB1ABAAAAAEAAMAAAB1ABEAAAAAAAMAAAB1ABIAAAAAAAIAAAB1ABMAAAABAAIAAAB1ABQAAAAEAAIAAAB1ABUAAAAFAAMAAAB1ABYAAAADAAIAAAB2ABAAAAAAAAMAAAB2ABEAAAAFAAMAAAB2ABIAAAADAAIAAAB2ABMAAAAEAAIAAAB2ABQAAAABAAIAAAB2ABUAAAAAAAIAAAB2ABYAAAADAAIAAAB3ABAAAAADAAIAAAB3ABEAAAAFAAMAAAB3ABIAAAAAAAMAAAB3ABMAAAAEAAMAAAB3ABQAAAAAAAIAAAB3ABUAAAAAAAMAAAB3ABYAAAABAAIAAAB4ABAAAAADAAMAAAB4ABEAAAAEAAMAAAB4ABIAAAAEAAMAAAB4ABMAAAADAAIAAAB4ABQAAAAFAAMAAAB4ABUAAAACAAMAAAB4ABYAAAAFAAIAAAB5ABAAAAACAAIAAAB5ABEAAAADAAIAAAB5ABIAAAACAAIAAAB5ABMAAAAFAAIAAAB5ABQAAAAEAAMAAAB5ABUAAAACAAIAAAB5ABYAAAACAAMAAAB6ABAAAAAEAAMAAAB6ABEAAAAEAAMAAAB6ABIAAAAFAAMAAAB6ABMAAAAEAAIAAAB6ABQAAAACAAMAAAB6ABUAAAAAAAMAAAB6ABYAAAAFAAIAAAB7ABAAAAAAAAMAAAB7ABEAAAAEAAIAAAB7ABIAAAAFAAIAAAB7ABMAAAAEAAMAAAB7ABQAAAACAAIAAAB7ABUAAAACAAIAAAB7ABYAAAACAAMAAAB8ABAAAAACAAMAAAB8ABEAAAAFAAIAAAB8ABIAAAACAAMAAAB8ABMAAAAFAAIAAAB8ABQAAAAEAAMAAAB8ABUAAAACAAMAAAB8ABYAAAADAAIAAAB9ABAAAAAAAAIAAAB9ABEAAAAAAAIAAAB9ABIAAAAFAAMAAAB9ABMAAAAFAAIAAAB9ABQAAAABAAMAAAB9ABUAAAACAAIAAAB9ABYAAAADAAIAAAB+ABAAAAACAAMAAAB+ABEAAAAAAAIAAAB+ABIAAAAFAAMAAAB+ABMAAAABAAIAAAB+ABQAAAADAAIAAAB+ABUAAAABAAMAAAB+ABYAAAAEAAIAAAB/ABAAAAACAAIAAAB/ABEAAAAEAAIAAAB/ABIAAAAAAAMAAAB/ABMAAAAAAAMAAAB/ABQAAAACAAIAAAB/ABUAAAADAAIAAAB/ABYAAAAFAAIAAACAABAAAAABAAMAAACAABEAAAAEAAMAAACAABIAAAABAAMAAACAABMAAAAAAAMAAACAABQAAAACAAIAAACAABUAAAACAAIAAACAABYAAAAAAAIAAACBABAAAAABAAIAAACBABEAAAAFAAIAAACBABIAAAAFAAMAAACBABMAAAAFAAMAAACBABQAAAACAAIAAACBABUAAAADAAIAAACBABYAAAAFAAIAAACCABAAAAAFAAIAAACCABEAAAABAAMAAACCABIAAAADAAIAAACCABMAAAADAAMAAACCABQAAAADAAMAAACCABUAAAABAAIAAACCABYAAAABAAIAAACDABAAAAACAAMAAACDABEAAAACAAMAAACDABIAAAAEAAMAAACDABMAAAAEAAMAAACDABQAAAAFAAMAAACDABUAAAAEAAMAAACDABYAAAADAAMAAACEABAAAAAFAAMAAACEABEAAAAEAAIAAACEABIAAAADAAMAAACEABMAAAACAAMAAACEABQAAAADAAMAAACEABUAAAAAAAIAAACEABYAAAABAAIAAACFABAAAAAFAAMAAACFABEAAAAEAAMAAACFABIAAAABAAMAAACFABMAAAAFAAMAAACFABQAAAAFAAIAAACFABUAAAADAAIAAACFABYAAAAFAAMAAACGABAAAAABAAIAAACGABEAAAACAAIAAACGABIAAAABAAIAAACGABMAAAAEAAIAAACGABQAAAADAAMAAACGABUAAAACAAIAAACGABYAAAACAAIAAACHABAAAAABAAMAAACHABEAAAABAAIAAACHABIAAAACAAIAAACHABMAAAAAAAIAAACHABQAAAAEAAMAAACHABUAAAABAAIAAACHABYAAAACAAIAAACIABAAAAAFAAIAAACIABEAAAACAAMAAACIABIAAAAFAAIAAACIABMAAAAAAAMAAACIABQAAAACAAIAAACIABUAAAAEAAIAAACIABYAAAAEAAIAAACJABAAAAADAAMAAACJABEAAAAFAAIAAACJABIAAAACAAIAAACJABMAAAABAAMAAACJABQAAAAFAAIAAACJABUAAAAEAAMAAACJABYAAAAAAAMAAACKABAAAAACAAMAAACKABEAAAADAAIAAACKABIAAAAEAAIAAACKABMAAAACAAMAAACKABQAAAAFAAMAAACKABUAAAACAAIAAACKABYAAAAAAAMAAACLABAAAAABAAIAAACLABEAAAABAAMAAACLABIAAAAEAAMAAACLABMAAAADAAIAAACLABQAAAADAAMAAACLABUAAAACAAIAAACLABYAAAABAAMAAACMABAAAAAFAAIAAACMABEAAAABAAMAAACMABIAAAAAAAMAAACMABMAAAAEAAIAAACMABQAAAABAAIAAACMABUAAAADAAIAAACMABYAAAAEAAMAAACNABAAAAABAAMAAACNABEAAAABAAIAAACNABIAAAAAAAIAAACNABMAAAACAAMAAACNABQAAAADAAIAAACNABUAAAACAAIAAACNABYAAAAAAAIAAACOABAAAAAFAAIAAACOABEAAAAAAAIAAACOABIAAAAAAAMAAACOABMAAAABAAIAAACOABQAAAAFAAMAAACOABUAAAAFAAIAAAA1AA4AAAACAAEAAAA2AA4AAAACAAEAAAD0/w8AAAADAAEAAADz/xAAAAACAAIAAADz/w8AAAACAAIAAADz/w4AAAACAAIAAADz/w0AAAACAAIAAADz/wwAAAACAAIAAADz/wsAAAACAAIAAADz/woAAAACAAIAAADz/wkAAAACAAIAAADz/wgAAAACAAIAAAA=")
tile_set = SubResource("TileSet_jslg6")

[node name="MagicStick" parent="." instance=ExtResource("3_lgwpv")]
position = Vector2(1101, 86)

[node name="PlatformPlayer" parent="." instance=ExtResource("1_ta3a2")]
position = Vector2(205, 214)

[node name="Camera2D" type="Camera2D" parent="PlatformPlayer"]
position = Vector2(7, -55)
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true

[node name="HUD" parent="PlatformPlayer/Camera2D" instance=ExtResource("10_ilt02")]
offset_left = -212.0
offset_top = -159.0
offset_right = -172.0
offset_bottom = -119.0

[node name="cubes" type="Node2D" parent="."]

[node name="cubeStaticBody2D" parent="cubes" instance=ExtResource("4_71btw")]
top_level = true
position = Vector2(569, 216)

[node name="magic_cubeStaticBody2D2" parent="cubes" instance=ExtResource("4_71btw")]
position = Vector2(1609, 99)
spawned_item = ExtResource("8_sgmso")

[node name="enemies" type="Node2D" parent="."]
position = Vector2(205, 214)

[node name="PlatformMushroom" parent="enemies" instance=ExtResource("8_madtp")]
position = Vector2(342, 10)

[connection signal="player_select_magic_fire" from="PlatformPlayer/Camera2D/HUD" to="." method="_on_hud_player_select_magic_fire"]
[connection signal="player_select_magic_freeze" from="PlatformPlayer/Camera2D/HUD" to="." method="_on_hud_player_select_magic_freeze"]
[connection signal="player_select_magic_stick" from="PlatformPlayer/Camera2D/HUD" to="." method="_on_hud_player_select_magic_stick"]
